--- a/src/Lurker.Epic/Lurker.Epic.csproj
+++ b/src/Lurker.Epic/Lurker.Epic.csproj
@@ -4,17 +4,19 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="epic.lurker\OpenEpicLink.url">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="Lurker.Common" Version="1.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="epic.lurker\OpenEpicLink.url">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
