--- a/src/Lurker.Epic/Lurker.Epic.csproj
+++ b/src/Lurker.Epic/Lurker.Epic.csproj
@@ -1,21 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>1.1.0</Version>
+	<Version>8.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="epic.lurker\OpenEpicLink.url">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Lurker.Common" Version="1.1.0" />
+    <PackageReference Include="Lurker.Common" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
